refactor whole project
