# src/main/kotlin/com/example/dto/OrderRequest.kt
@@ -1,14 +1,0 @@
-package com.example.dto
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class OrderItemRequest(
-    val productId: Int,
-    val quantity: Int
-)
-
-@Serializable
-data class OrderRequest(
-    val items: List<OrderItemRequest>
-)
